src/index.css
*,
*::before,
*::after {
  box-sizing: border-box;
  cursor: default;
}

:root {
  --focus-ring-color: oklch(0.6 0.16 250);
  --text-color: oklch(0 0 0);
  --surface-color: oklch(100 0 0);
  --tint-color: oklch(0 0 0);
  --semantic-positive-color: oklch(0.7 0.2 150);
  --semantic-danger-color: oklch(0.5 0.2 20);
  --semantic-negative-color: oklch(0.7 0.2 20);
  /* https://smoothshadows.com/#djEsMSw1LDAuMDgsMjQsMTIsMCwjMDMwNzEyLCNmM2Y0ZjYsI2ZmZmZmZiwz */
  --elevated-shadow: 0px 0px 1px rgba(3, 7, 18, 0.02),
    0px 2px 4px rgba(3, 7, 18, 0.03), 0px 4px 9px rgba(3, 7, 18, 0.05),
    0px 8px 15px rgba(3, 7, 18, 0.06), 0px 12px 24px rgba(3, 7, 18, 0.08);
}

@media (prefers-color-scheme: dark) {
  :root {
    --text-color: oklch(100 0 0);
    --surface-color: oklch(0.2 0.03 250);
    --tint-color: oklch(100 0 0);
    --semantic-danger-color: oklch(0.8 0.2 20);
    --elevated-shadow: inset 0 0 0 2px oklch(from var(--tint-color) l c h / 5%);
  }
}

* {
  scrollbar-color: oklch(from var(--text-color) l c h / 10%)
    color-mix(in oklch, var(--tint-color) 3%, var(--surface-color));
}

:focus {
  outline: 0;
}

:focus-visible {
  outline: 2px solid var(--focus-ring-color);
}

html {
  font-size: 8px;
}

body {
  font-family: "IBM Plex Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings: "wdth" 100;
  font-size: 2rem;
  line-height: 3rem;
  background: var(--surface-color);
  color: var(--text-color);
  margin: 0;
}

#root {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 4rem;
  height: 100dvh;
  background: oklch(from var(--tint-color) l c h / 10%);
}

